Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34280

QWebPluginFactory does not create the plugin

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0
    • 5.2.0 Beta1
    • WebKit
    • None
    • Windows 7 + Windows 8, MSVC 2012
    • c317e5d8d991537889d674f8ee8c0736ca4f268b

    Description

      I tried to create a new plugin using QWebPluginFactory but create() is never called. This used to work in Qt5.1.1.
      Attached is an example code.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mibrunin Michael Bruning
              qtcomsupport Qt Support
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes