Add padding objects for classes with netscape plugin api conditionals.

When building with the Visual Studio Compiler on windows, we are facing
some problems because objects that are shared between WebKit1 and
WebKit2 have different memory maps for inlined accessors because the
Netscape Plugin API had to be disabled for the WebKit2 API on Windows
in the new snapshot for Qt 5.2.

This caused plugins not to be loaded because the wrong values for the
mime types and urls are returned and might lead to all kinds of bugs and
quirks.

This patch adds dummy pointers / data structures for the parts of the
build that do not have the Netscape Plugin API enabled.

Task-number: QTBUG-34280
Change-Id: Iaa2cd2b19d07eff71981f392d913ae5218495266
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@digia.com>
Reviewed-by: Michael Bruning <michael.bruning@digia.com>